Completed Super Mega Bonus Credit Hyper Fighting

--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 
         <form id="person-form">
             <p>
-                <label for="peronName">Name</label>
+                <label for="personName">Name</label>
                 <input type="text" name="personName">
             </p>
+            <p>
+                <label for="somethingElse">Something Else</label>
+                <input type="text" name="something">
             <button type="submit">Go</button>
         </form>
+
+        <div id="stats">
+            <p id="div-para">
+            </p>
+        </div>
 
         <script src="index.js"></script>
     </body>
