Add new form for color to make it work this time....

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
             <p>
                 <label for="somethingElse">Something Else</label>
                 <input type="text" name="something">
+            </p>
+            <p>
+                <label for="colorInput">Color?</label>
+                <input type="text" name="color">
+            </p>
             <button type="submit">Go</button>
         </form>
 
