Add Foundatino CSS

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Person Stats</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.0/css/foundation.min.css">
     </head>
     <body>
         <h1>Person Stats</h1>
@@ -18,7 +19,7 @@
             </p>
             <p>
                 <label for="colorInput">Color?</label>
-                <input type="text" name="color">
+                <input type="color" name="color">
             </p>
             <button type="submit">Go</button>
         </form>
@@ -27,7 +28,7 @@
             <p id="div-para">
             </p>
         </div>
-        
+
         <script src="index.js"></script>
     </body>
 </html>
