made changeHeading handleSubmit, add renderColor, renderListItem, renderList

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Person Stats</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.0/css/foundation.min.css">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <h1>Person Stats</h1>
@@ -14,19 +15,17 @@
                 <input type="text" name="personName">
             </p>
             <p>
-                <label for="somethingElse">Something Else</label>
-                <input type="text" name="something">
+                <label for="age">Age</label>
+                <input type="text" name="personAge">
             </p>
             <p>
-                <label for="colorInput">Color?</label>
+                <label for="colorInput">Color</label>
                 <input type="color" name="color">
             </p>
             <button type="submit">Go</button>
         </form>
 
         <div id="stats">
-            <p id="div-para">
-            </p>
         </div>
 
         <script src="index.js"></script>
