--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
+        <div id="some" style="position: fixed; z-index: -99; width: 100%; height: 100%">
+            <iframe id="something" frameborder="0" height="100%" width="100%" src="">
+            </iframe>
+        </div>
         <h1>Person Stats</h1>
 
         <form id="person-form">
